samples/_failures_safe/1761263058_8e6dd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce8b9682.c: In function ‘main’:
./samples/SAFE/__tmp_ce8b9682.c:148:5: error: expected declaration or statement at end of input
  148 |     if (chunks_processed == 0) {
      |     ^~
./samples/SAFE/__tmp_ce8b9682.c:148:5: error: expected declaration or statement at end of input
